Have ErrorProne validate that _almost_ everything really is immutable